--- a/src/app/league-list/league-list.component.html
+++ b/src/app/league-list/league-list.component.html
@@ -1,3 +1,15 @@
-<p>
-  league-list works!
-</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <app-england></app-england>
+      <app-spain></app-spain>
+      <app-portugal></app-portugal>
+    </div>
+    <div class="col-md-6">
+      <app-germany></app-germany>
+      <app-france></app-france>
+      <app-italia></app-italia>
+    </div>
+  </div>
+</div>
