--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@
 @media (max-width: 600px){
    .mw300{max-width: 300px;}
 }
-
+.puntero{cursor: pointer;}
 .maintit{
     font-family: 'Open Sans', sans-serif;
     color: #111;
@@ -62,4 +62,11 @@
        -moz-user-select: none; /* Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none;
+}
+
+.effect{transition: ease-in 0.5s}
+.effect:hover{
+    background-color: rgb(217, 220, 224);
+    transform: scale(1.05);
+    z-index: 9;
 }
