--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .cuadro{
     padding: 5px;
     border-bottom: 1px dotted rgb(230, 126, 148);
@@ -69,4 +73,49 @@
     background-color: rgb(217, 220, 224);
     transform: scale(1.05);
     z-index: 9;
+}
+.stickme{position: sticky;}
+
+.heading{
+    width: 100%;
+    height: 230px;
+    position: relative;
+    top: -50px;
+    background-color: #020201;
+    color: #EEE;
+    transform: skewY(-3.5deg);
+    overflow: hidden;
+}
+
+.titeam{
+    transform: skewY(3deg);
+    font-size: 5rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    opacity: 0.75;
+}
+
+.sombratit{
+    position: absolute;
+    top: 40px;
+    left: 50px;
+    font-size: 10rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    opacity: 0.2;
+    transform: skewY(3.5deg);
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+}
+
+.top50{
+    padding-top: 170px;
 }
